tests/codegen/compile/runtime/fail/invalid_fact_attr.stderr
error: Second fact attribute is supplied.
  --> $DIR/invalid_fact_attr.rs:12:1
   |
12 | #[fact]
   | ^^^^^^^
   |
help: Consider adding fact to:
  --> $DIR/invalid_fact_attr.rs:11:1
   |
11 | #[runtime::test(async_std)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
